--- a/style.css
+++ b/style.css
@@ -1,54 +1,68 @@
-/* About me */
-#profilePicture{
-    height: 100px;
-    width: 100px;
-    border-radius: 25px;
+/* INDEX */
+
+  /* Marian Dropdown */
+.dropdownButton {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
 }
 
+.dropdownButton:hover, .dropodownButton:focus {
+  background-color: #2980B9;
+}
 
-/* Marian Dropdown
-Dropdown Button */
-.dropdownButton {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropdownButton:hover, .dropodownButton:focus {
-    background-color: #2980B9;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .marianDropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .marianDropdownContent {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .marianDropdownContent a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .marianDropdownContent a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
+.marianDropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.marianDropdownContent {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.marianDropdownContent a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.marianDropdownContent a:hover {background-color: #ddd;}
+
+.show {display:block;}
+
+  /* Footer */
+
+
+
+/* ABOUT-ME */
+#profilePicture{
+  height: 100px;
+  width: 100px;
+  border-radius: 25px;
+}
+
+/* THE HOLY ROSARY */
+#rosaryBanner{
+  margin: auto;
+}
+.howToPrayContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 2px solid red;
+}
+
+.howToPrayChild{
+  margin: auto;
+  max-width: 75%;
+}
