--- a/styles/the-holy-rosary.css
+++ b/styles/the-holy-rosary.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 2px solid red;
+    border: 2px solid black;
   }
   
   .howToPrayChild{
