--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,7 @@ body{
     align-items: center;
     border-bottom: 5px solid black;
     margin-bottom: 5px;
+    background-color: rgba(255, 255, 255, .3)
 }
 
 #prayerBar{
