--- a/styles/index.css
+++ b/styles/index.css
@@ -13,15 +13,22 @@ body{
     background-color: rgba(255, 255, 255, .3)
 }
 
-#prayerBar{
+/*Parent container for all flexbox items in main content area*/
+#indexContentContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+/* Prayer Bar */
+#prayerBar {
     display: flex;
     flex-direction: column;
     width: 100px;
     gap: 5px;
-    /* border: 2px solid black; */
 }
 
-#prayerBar h3{
+#prayerBar h3 {
     margin: auto;
     color: white;
 }
@@ -41,37 +48,42 @@ body{
     border-radius: 25px;
     border: none;
     cursor: pointer;
-  }
+}
   
-  .dropdownContent {
+.dropdownContent {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  }
+}
   
-  .dropdownContent a {
+.dropdownContent a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
+}
   
   /* Change color of dropdown links on hover */
   .dropdownContent a:hover {background-color: #43A6C6}
   
   .dropdown:hover .dropdownContent, .dropdown:active .dropdownContent{
     display: block;
-  }
+}
   
-  .dropdown:hover .dropdownButton {
+.dropdown:hover .dropdownButton {
     background-color: grey;
-  }
+}
 
-  footer{
+footer{
     color: white;
     position: fixed;
     bottom: 0;
-  }
+}
+
+/*Church Liturgical Calendar*/
+#churchCalendar h3{
+    color: white;
+}
