--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -1,6 +1,30 @@
 /* ABOUT-ME */
+body{
+  background-image: url('/images/misty-mountains.jpeg');
+  background-size: cover;
+  background-repeat: repeat;
+}
+#aboutMeBanner{
+  text-align: center;
+  border-bottom: 5px solid black;
+  margin-bottom: 5px;
+  background-color: rgba(255, 255, 255, .3);
+  width: 100vw;
+}
+
+#aboutParentContainer{
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, .3);
+  border: 2px solid black;
+  border-radius: 25px;
+  margin: 0 auto 5px auto;
+  padding: 16px;
+  max-width: 500px;
+}
+
 #profilePicture{
-    height: 100px;
-    width: 100px;
-    border-radius: 25px;
-  }
+  height: 100px;
+  width: 100px;
+  border-radius: 25px;
+}
