--- a/styles/church-info/baptism.css
+++ b/styles/church-info/baptism.css
@@ -16,14 +16,16 @@ body {
 
 .baptismContainer{
     display: flex;
+    flex-direction: column;
 }
 
 .baptismChild{
-    flex-direction: column;
     background-color: rgba(255, 255, 255, .3);
     border: 2px solid black;
     border-radius: 25px;
     padding: 0px 10px;
     margin: auto;
+    margin-bottom: 10px;
     max-width: 500px;
+    text-align: center;
 }
